--- a/index.html
+++ b/index.html
@@ -276,13 +276,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/kennhart/Project1JSNR/tree/main/expense-tracker-p1'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/kennhart/Project1JSNR/tree/main/expense-tracker-p1'"
               >
                 Live Demo
               </button>
