--- a/index.html
+++ b/index.html
@@ -60,23 +60,23 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='https://www.linkedin.com/in/kennedy-hartley-854687111/'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/kennhart'"
           />
         </div>
       </div>
     </section>
     <section id="about">
       <p class="section__text__p1">About Me</p>
-      <h1 class="title-about">Kennedy Hartley, originally a painter and tattoo artist, 
-        I ventured into Amazon Web Services (AWS) in 2020 with my father his job as a Network Engineer,
-        inspired by my artistic background, led me to kindle a passion for Web Development. 
-        Motivated by this newfound interest, I've decided to pursue a Bachelor's in Computer Science. 
+      <h1 class="title-about">Kennedy Hartley, originally a painter and tattoo artist,
+         in an effort to create a website as an online gallery.
+        Inspired by my artistic passion, and interest in Front End Development.
+       I've decided to pursue a Bachelor's in Computer Science.
       </h1>
       <div class="section-container">
         <div class="section__pic-container">
@@ -109,9 +109,9 @@
           </div>
           <div class="text-container">
             <p>
-              At STLCC set to graduate in 2026 with a Bachelors in Computer Science. 
+              At STLCC I'm set to graduate in 2026 with a Bachelors in Computer Science. 
         Full Stack Software Engineering as an ever changing passion has driven me to further my knowlege with
-         Java, Linux, C++, Python, Node.js, CompTia Security along with APIs and Data Structures. 
+         Java, Linux, C++, React, Node.js,UI/UX Design, CompTia Security along with APIs and Data Structures. 
         My enthusiasm for the fusion of art and technology continues to 
         grow as I navigates the dynamic landscape of Computer Science.
             </p>
@@ -184,7 +184,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>TypeScript</h3>
+                  <h3>React</h3>
                   <p>Basic</p>
                 </div>
               </article>
@@ -195,8 +195,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3><Node class="js"></Node></h3>
-                  <p>Intermediate</p>
+                  <h3></h3>
+                  <p></p>
                 </div>
               </article>
             </div>
@@ -233,8 +233,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3></h3>
-                  <p>Intermediate</p>
+                  <h3>Git</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -244,8 +244,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Git</h3>
-                  <p>Experienced</p>
+                  <h3>Aws</h3>
+                  <p>Intermediate</p>
                 </div>
               </article>
             </div>
@@ -272,7 +272,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Vanilla Javascript</h2>
+            <h2 class="experience-sub-title project-title">Expense tracker Javascript</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -282,7 +282,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/kennhart/Project1JSNR/tree/main/expense-tracker-p1'"
+                onclick="location.href='https://kennhart.github.io/Project1JSNR/'"
               >
                 Live Demo
               </button>
@@ -300,18 +300,19 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/kennhart'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/kennhart'"
               >
                 Live Demo
               </button>
             </div>
           </div>
+
           <!-- project section  -->
           </div>
         </div>
@@ -341,7 +342,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/kennedy-hartley-854687111/">LinkedIn</a></p>
         </div>
       </div>
     </section>
