--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     <section id="about">
       <p class="section__text__p1">About Me</p>
       <h1 class="title-about">Kennedy Hartley, originally a painter and tattoo artist,
-         in an effort to create a website as an online gallery.
-        Inspired by my artistic passion, and interest in Front End Development.
+         in an effort to create a website as an online gallery,inspired my artistic passion 
+         and interest in Front End Development.
        I've decided to pursue a Bachelor's in Computer Science.
       </h1>
       <div class="section-container">
